kubernetes/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: travel-share
  namespace: travel-share
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    tls:
      httpsRedirect: true
    hosts:
    - www.travelshare.cvapr.xyz
    - travelshare.cvapr.xyz
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: gateway-certificate
    hosts:
    - www.travelshare.cvapr.xyz
    - travelshare.cvapr.xyz
